# vehicle

./: .dockerignore  .gitattributes  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .stylish-haskell.yaml  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  ChangeLog.md  Dockerfile.jammy  Dockerfile.ubuntu  HACKING.md  LICENSE  Makefile  README.md  build.hs  bumpver.toml  cabal.project  cabal.project.config  cabal.project.debug  cabal.project.fun-profile  cabal.project.fun-profile.ghc-9.4.4  cabal.project.fun-profile.ghc-9.4.4.freeze  cabal.project.ghc-8.10.7  cabal.project.ghc-8.10.7.freeze  cabal.project.ghc-8.10.freeze  cabal.project.ghc-9.0.2  cabal.project.ghc-9.0.2.freeze  cabal.project.ghc-9.0.freeze  cabal.project.ghc-9.2  cabal.project.ghc-9.2.7.freeze  cabal.project.ghc-9.2.8  cabal.project.ghc-9.2.8.freeze  cabal.project.ghc-9.2.freeze  cabal.project.ghc-9.4  cabal.project.ghc-9.4.2.freeze  cabal.project.ghc-9.4.4  cabal.project.ghc-9.4.4.freeze  (+45 more)
py-vehicle-lang/: .gitignore  .python-version  HACKING.md  LICENSE  MANIFEST.in  Setup.hs  cabal.project.freeze  pyproject.toml  setup.py  vehicle-python-binding.cabal
py-vehicle-lang-tensorflow/: .gitignore  benchmarks.sh  pyproject.toml
py-vehicle-lang-tensorflow/src/vehicle_lang_tensorflow/: command_line.py
py-vehicle-lang-tensorflow/tests/: test_LossFunctionTranslation.py  test_bounded.py
py-vehicle-lang-tensorflow/tests/data/: test_constant.vcl
py-vehicle-lang/dockerfiles/: Dockerfile.focal  Dockerfile.jammy
py-vehicle-lang/dockerfiles/ubuntu/: Dockerfile
py-vehicle-lang/scripts/: before-all-almalinux-8.8.sh  before-all-alpine-3.12.12.sh  before-all-centos-7.sh  before-all-centos.sh  build-wheel-manylinux.sh  build-wheel-manylinux2014_x86_64.sh  build-wheel-manylinux_2_28_aarch64.sh  build-wheel.sh  build-wheels  build-wheels.sh  docker-build-wheel.sh  docker-build-wheels  docker-build-wheels.sh
py-vehicle-lang/src/: VehiclePythonBinding.hs
py-vehicle-lang/src/vehicle_lang/: __init__.py  __main__.py  _binding.pyi  _compat_singledispatchmethod.py  _compat_singledispatchmethod.pyi  _internal.py  _tempfiles.py  _version.py  binding.def  binding.i  errors.py  session.py
py-vehicle-lang/tests/: test_loss_function_exec.py  test_loss_function_load.py  test_loss_function_tensorflow.py  test_main.py  test_pygments.sh  test_vehicle_cli.py  test_vehicle_exec_loss_function.py  test_vehicle_lang.py  test_vehicle_load_loss_function.py  test_vehicle_loss_function.py
py-vehicle-lang/tests/data/: test_at.vcl  test_maximum.vcl  test_minimum.vcl  test_negation.vcl  test_one.vcl  test_quantifier_any.vcl  test_tensor.vcl  test_two.vcl  test_variable.vcl
scripts/benchmark-histogram/: pyproject.toml
scripts/benchmark-histogram/benchmark_histogram/: main.py
tasty-golden-executable/: CHANGELOG.md  LICENSE  tasty-golden-executable.cabal
tasty-golden-executable/src/General/: Extra.hs
vehicle/: .hlint.yaml  LICENSE  vehicle.cabal
vehicle-python/: .editorconfig  .gitignore  .python-version  MANIFEST.in  README.md  Setup.hs  benchmarks.sh  cabal.project  cabal.project.freeze  pyproject.toml  requirements-ci.txt  setup.py  vehicle-python-binding.cabal
vehicle-python-core/: .gitignore  MANIFEST.in  Setup.hs  cabal.project  hie.yaml  pyproject.toml  setup.py  vehicle-python-core.cabal
vehicle-python-core/.github/: dependabot.yml
vehicle-python-core/scripts/: build-wheels
vehicle-python-core/src/: VehiclePythonCore.hs
vehicle-python-core/src/vehicle_core/: __main__.py
vehicle-python-core/tests/: test_vehicle_core.py
vehicle-python/dockerfiles/: Dockerfile.focal  Dockerfile.jammy
vehicle-python/plots/: 2d-heatmap-classification-accuracy.R  constraint-satisfaction-line-graph.R
vehicle-python/scripts/: before-all-almalinux-8.8.sh  build-wheel.sh  docker-build-wheel.sh
vehicle-python/src/: VehiclePythonBinding.hs
vehicle-python/src/vehicle/: bounded-output.json  command_line.py  dog.vcl  t.json  test.py  test_LossFunctionTranslation.py  vehicle.py
vehicle-python/src/vehicle_lang/: __init__.py  __main__.py  _binding.pyi  _interface.py  _target.py  _temporary_files.py  _version.py  binding.i  error.py  session.py  tensorflow.py  typing.py
vehicle-python/tests/: HCAS.vcl  command_line.py  constraint_accuracy.py  mnist.vcl  mnist_constraint_accuracy.py  not_init.py  standard-mnist-training.py  t.json  test.py  test_HCAS.py  test_LossFunctionTranslation.py  test_bounded.py  test_compile_dl2loss_exec.py  test_compile_lossdl2_exec.py  test_compile_lossdl2_load.py  test_compile_lossgodel_exec.py  test_compile_python_exec.py  test_compile_python_load.py  test_exec.py  test_exec_load.py  test_interpret_exec.py  test_interpret_load.py  test_loss_function_exec.py  test_loss_function_load.py  test_loss_function_tensorflow.py  test_lossdl2_exec.py  test_lossdl2_exec_tf_bounded.py  test_lossdl2_exec_tf_mnist_robustness.py  test_lossdl2_load.py  test_lossdl2_tensorflow.py  test_lossgodel_exec.py  test_main.py  test_mnist.py  test_mnist_cross_entropy.py  test_mnist_custom_loss.py  test_mnist_custom_loss_single_run.py  test_pygments.py  test_pygments.sh  test_python_exec.py  test_python_load.py  (+2 more)
vehicle-python/tests/data/: test_addition.vcl  test_at.vcl  test_at.vcl.tokens.golden  test_bounded.vcl  test_constant.vcl  test_constant.vcl.tokens.golden  test_division.vcl  test_division.vcl.tokens.golden  test_indicator.vcl  test_maximum.vcl  test_minimum.vcl  test_multiplication.vcl  test_multiplication.vcl.tokens.golden  test_negation.vcl  test_negation.vcl.tokens.golden  test_network.json  test_network.vcl  test_network.vcl.tokens.golden  test_power.vcl  test_quantifier_all.vcl  test_quantifier_all.vcl.tokens.golden  (+6 more)
vehicle-python/vehicle/: __init__.py  command_line.py  utils.py  vehicle.py
vehicle-syntax/: .stylish-haskell.yaml  Setup.hs  vehicle-syntax.cabal
vehicle/app/: Main.hs  NewTest.hs
vehicle/lib/: std.vcl
vehicle/script/: data-files  extra-doc-files  extra-source-files  make-golden-tests  make-tests
vehicle/src/: Vehicle.hs
vehicle/tests/: Golden.hs  Tests.hs  Unit.hs  testVerifier
(+2910 files in other folders)
