cabal-version: 2.4

name:           vehicle
version:        0.1.0.1
description:    Please see the README on GitHub at <https://github.com/wenkokke/vehicle#readme>
homepage:       https://github.com/wenkokke/vehicle#readme
bug-reports:    https://github.com/wenkokke/vehicle/issues
author:         Wen Kokke
maintainer:     wenkokke@users.noreply.github.com
copyright:      © Wen Kokke
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/wenkokke/vehicle

common common-base
  build-depends:      base >=4.10 && <5
  default-language:   Haskell2010

library
  import:               common-base
  exposed-modules:      Vehicle
                      , Vehicle.Prelude
                      , Vehicle.Language.AST
                      , Vehicle.Language.AlphaEquivalence
                      , Vehicle.Language.DSL
                      , Vehicle.Language.Descope
                      , Vehicle.Language.Scope
                      , Vehicle.Language.SupplyNames
                      , Vehicle.Language.Normalise
                      , Vehicle.Language.Parse
                      , Vehicle.Language.Print
                      , Vehicle.Language.Simplify
                      , Vehicle.Language.Sugar
                      , Vehicle.Language.Type
                      , Vehicle.Language.Elaborate.Core
                      , Vehicle.Language.Elaborate.Frontend
                      , Vehicle.Language.Delaborate.Core
                      , Vehicle.Language.Delaborate.Frontend
                      , Vehicle.Backend.ITP.Agda
                      , Vehicle.Backend.Verifier.SMTLib
                      , Vehicle.Backend.Verifier.VNNLib

  other-modules:
                      -- Files generated by Cabal
                        Paths_vehicle

                      -- Submodules
                      , Vehicle.Prelude.Error
                      , Vehicle.Prelude.Prettyprinter
                      , Vehicle.Prelude.Provenance
                      , Vehicle.Prelude.Token
                      , Vehicle.Prelude.Logging
                      , Vehicle.Prelude.Supply

                      , Vehicle.Language.AST.Builtin
                      , Vehicle.Language.AST.BuiltinPatterns
                      , Vehicle.Language.AST.Core
                      , Vehicle.Language.AST.DeBruijn
                      , Vehicle.Language.AST.Name
                      , Vehicle.Language.AST.Visibility
                      , Vehicle.Language.AST.Utils

                      , Vehicle.Language.Type.Core
                      , Vehicle.Language.Type.Meta
                      , Vehicle.Language.Type.MetaSet
                      , Vehicle.Language.Type.MetaSubstitution
                      , Vehicle.Language.Type.TypeClass
                      , Vehicle.Language.Type.Unify

                      , Vehicle.Backend.ITP.Core
                      , Vehicle.Backend.ITP.Agda.Preprocess
                      , Vehicle.Backend.Verifier.Core

                      -- Generated files, would be nice to split these out
                      -- into own sublibrary. For the problems with this,
                      -- see https://github.com/wenkokke/vehicle/issues/17
                      , Vehicle.Core.Abs
                      , Vehicle.Core.ErrM
                      , Vehicle.Core.Lex
                      , Vehicle.Core.Par
                      , Vehicle.Core.Print
                      , Vehicle.Frontend.ErrM
                      , Vehicle.Frontend.Layout
                      , Vehicle.Frontend.Lex
                      , Vehicle.Frontend.Par
                      , Vehicle.Frontend.Abs
                      , Vehicle.Frontend.Print
  hs-source-dirs:       src/hs
                      , gen/hs
  build-depends:        array                >=0.5 && <1
                      , text                 >=1.2 && <2
                      , hashable             >=1.3 && <2
                      , transformers         >=0.4 && <0.6
                      , mtl                  >=2.2 && <3
                      , recursion-schemes    >=5.2 && <6
                      , range                >=0.3 && <1
                      , containers           >=0.5 && <1
                      , prettyprinter        >=1.7 && <2
                      , data-fix             >=0.2 && <1
                      , deepseq              >=1.4 && <2
                      , ansi-terminal        >=0.6 && <1
                      , hashable
                      , split
                      , data-default-class
  build-tool-depends:   alex:alex
                      , happy:happy
  ghc-options:          -Wall -fprint-potential-instances
  default-extensions:   ImportQualifiedPost
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , RankNTypes
                      , ConstraintKinds
                      , DataKinds
                      , PolyKinds
                      , KindSignatures
                      , FlexibleContexts
                      , FlexibleInstances
                      , MultiParamTypeClasses
                      , LambdaCase
                      , OverloadedStrings
                      -- Cannot add this because the generated BNFC code is not compatible.
                      -- , OverloadedLists
                      , UndecidableInstances
                      , ScopedTypeVariables
                      , GADTs
                      , InstanceSigs
                      , TupleSections
                      , PatternSynonyms
                      , LiberalTypeSynonyms
                      , DuplicateRecordFields
                      , RecordWildCards
                      , DeriveFunctor
                      , DeriveFoldable
                      , DeriveTraversable
                      , DeriveGeneric

executable vehicle
  import:             common-base
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      vehicle

executable build
  import:             common-base
  main-is:            build.hs
  build-depends:      shake
                    , directory

test-suite vehicle-test
  import:             common-base
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:      Test.Golden
                    -- , Test.Generative
                    -- , Test.Generative.Generator
                    -- , Test.Generative.ToVehicle
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Test
  default-extensions: ImportQualifiedPost
  build-depends:      filepath >=1.4 && <2
                    , text     >=1.2 && <2
                    , Diff
                    , directory
                    , tasty
                    , tasty-golden
                    -- , tasty-hunit
                    , vehicle
                    -- For generation of terms
                    -- , lazy-search
                    -- , size-based
                    -- , testing-feat
                    -- , bifunctors
                    -- , mtl

