cabal-version: 3.0

name:           vehicle
version:        0.1.0.1
description:    Please see the README on GitHub at <https://github.com/wenkokke/vehicle#readme>
homepage:       https://github.com/wenkokke/vehicle#readme
bug-reports:    https://github.com/wenkokke/vehicle/issues
author:         Wen Kokke
maintainer:     wenkokke@users.noreply.github.com
copyright:      © Wen Kokke
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/wecankokke/vehicle

common common-base
  default-extensions: ImportQualifiedPost
                    , OverloadedStrings
                    , RecordWildCards
                    , ConstraintKinds
                    , FlexibleContexts
                    , LambdaCase
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , RankNTypes
                    , ConstraintKinds
                    , DataKinds
                    , PolyKinds
                    , KindSignatures
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , OverloadedLists
                    , UndecidableInstances
                    , ScopedTypeVariables
                    , GADTs
                    , InstanceSigs
                    , TupleSections
                    , PatternSynonyms
                    , LiberalTypeSynonyms
                    , DuplicateRecordFields
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric
                    , FunctionalDependencies
                    , ViewPatterns

  build-depends:      base       >=4.13 && <5
                    , text       >=1.2 && <2
                    , filepath   >=1.4 && <2
                    , mtl        >=2.2 && <3
                    , hashable   >=1.3 && <2
                    , containers >=0.5 && <1
                    , deepseq    >=1.4  && <2
                    , process
                    , directory

  default-language:   Haskell2010

-- The executable for the Shake build system
executable build
  main-is:            build.hs
  build-depends:      base >=4.13 && <5
                    , shake
                    , directory
                    , text >=1.2 && <2
                    , array >=0.5 && <1
  default-language:   Haskell2010

-- Sub-library containing files generated by BNFC
library vehicle-bnfc
  hs-source-dirs:       gen/hs
  exposed-modules:      Vehicle.Internal.Abs
                      , Vehicle.Internal.ErrM
                      , Vehicle.Internal.Lex
                      , Vehicle.Internal.Par
                      , Vehicle.Internal.Print
                      , Vehicle.External.ErrM
                      , Vehicle.External.Layout
                      , Vehicle.External.Lex
                      , Vehicle.External.Par
                      , Vehicle.External.Abs
                      , Vehicle.External.Print
  build-depends:        base >=4.13 && <5
                      , text >=1.2 && <2
                      , array >=0.5 && <1
  default-language:     Haskell2010

-- The main Vehicle library
library
  import:               common-base
  hs-source-dirs:       src/hs
  exposed-modules:      Vehicle
                      , Vehicle.Prelude

                      , Vehicle.Language.AST
                      , Vehicle.Language.DSL
                      , Vehicle.Language.Print
                      , Vehicle.Language.Sugar
                      , Vehicle.Language.StandardLibrary
                      , Vehicle.Language.StandardLibrary.Names

                      , Vehicle.Compile
                      , Vehicle.Compile.Prelude
                      , Vehicle.Compile.AlphaEquivalence
                      , Vehicle.Compile.Error
                      , Vehicle.Compile.Error.Message
                      , Vehicle.Compile.Parse
                      , Vehicle.Compile.Elaborate.Internal
                      , Vehicle.Compile.Elaborate.External
                      , Vehicle.Compile.Scope
                      , Vehicle.Compile.Type
                      , Vehicle.Compile.CoDeBruijnify
                      , Vehicle.Compile.Linearity
                      , Vehicle.Compile.Linearity.Core
                      , Vehicle.Compile.Linearity.GaussianElimination
                      , Vehicle.Compile.Linearity.FourierMotzkinElimination
                      , Vehicle.Compile.Normalise
                      , Vehicle.Compile.Normalise.Core
                      , Vehicle.Compile.Normalise.IfElimination
                      , Vehicle.Compile.Normalise.QuantifierLifting
                      , Vehicle.Compile.Normalise.DNF
                      , Vehicle.Compile.Normalise.UserVariables
                      , Vehicle.Compile.Resource
                      , Vehicle.Compile.ExpandResources
                      , Vehicle.Compile.ExpandResources.Core
                      , Vehicle.Compile.ExpandResources.Network
                      , Vehicle.Compile.ExpandResources.Dataset
                      , Vehicle.Compile.ExpandResources.Parameter
                      , Vehicle.Compile.LetInsertion
                      , Vehicle.Compile.Simplify
                      , Vehicle.Compile.SupplyNames
                      , Vehicle.Compile.Descope
                      , Vehicle.Compile.Delaborate.Internal
                      , Vehicle.Compile.Delaborate.External

                      , Vehicle.Check
                      , Vehicle.Export
                      , Vehicle.Verify
                      , Vehicle.Verify.VerificationStatus

                      , Vehicle.Backend.Agda
                      , Vehicle.Backend.Marabou
                      , Vehicle.Backend.Prelude
                      , Vehicle.Backend.LossFunction

                      , Vehicle.Resource

  other-modules:        Vehicle.Prelude.Prettyprinter
                      , Vehicle.Prelude.Token
                      , Vehicle.Prelude.Logging
                      , Vehicle.Prelude.Supply
                      , Vehicle.Prelude.DeveloperError

                      , Vehicle.Language.AST.Builtin
                      , Vehicle.Language.AST.Builtin.Core
                      , Vehicle.Language.AST.Builtin.Linearity
                      , Vehicle.Language.AST.Builtin.Polarity
                      , Vehicle.Language.AST.Core
                      , Vehicle.Language.AST.DeBruijn
                      , Vehicle.Language.AST.CoDeBruijn
                      , Vehicle.Language.AST.Name
                      , Vehicle.Language.AST.Visibility
                      , Vehicle.Language.AST.Position
                      , Vehicle.Language.AST.Provenance
                      , Vehicle.Language.AST.Relevance

                      , Vehicle.Compile.Type.Auxiliary
                      , Vehicle.Compile.Type.Irrelevance
                      , Vehicle.Compile.Type.Bidirectional
                      , Vehicle.Compile.Type.Constraint
                      , Vehicle.Compile.Type.ConstraintSolver.Core
                      , Vehicle.Compile.Type.ConstraintSolver.Linearity
                      , Vehicle.Compile.Type.ConstraintSolver.Polarity
                      , Vehicle.Compile.Type.ConstraintSolver.TypeClass
                      , Vehicle.Compile.Type.ConstraintSolver.TypeClassDefaults
                      , Vehicle.Compile.Type.ConstraintSolver.Unification
                      , Vehicle.Compile.Type.Meta
                      , Vehicle.Compile.Type.MetaSet
                      , Vehicle.Compile.Type.MetaMap
                      , Vehicle.Compile.Type.Generalise
                      , Vehicle.Compile.Type.Resource
                      , Vehicle.Compile.Type.WeakHeadNormalForm
                      , Vehicle.Compile.Type.VariableContext

                      , Vehicle.Compile.ExpandResources.Dataset.IDX
                      , Vehicle.Compile.CapitaliseTypeNames
                      , Vehicle.Compile.QuantifierAnalysis
                      , Vehicle.Compile.DependencyAnalysis
                      , Vehicle.Compile.Prelude.Patterns
                      , Vehicle.Compile.Prelude.Utils
                      , Vehicle.Compile.Prelude.Contexts
                      , Vehicle.Compile.Prelude.DependencyGraph
                      , Vehicle.Compile.Monomorphisation

                      , Vehicle.Backend.Agda.Compile
                      , Vehicle.Backend.Agda.Interact
                      , Vehicle.Backend.Marabou.Core
                      , Vehicle.Backend.Marabou.Compile
                      , Vehicle.Backend.Marabou.Interact
                      , Vehicle.Backend.LossFunction.Compile
                      , Vehicle.Backend.LossFunction.Interact

                      -- Files generated by Cabal
                      , Paths_vehicle

  build-depends:        vehicle-bnfc
                      , transformers         >=0.4  && <0.6
                      , recursion-schemes    >=5.2  && <6
                      , range                >=0.3  && <1
                      , data-default         >=0.7  && <1
                      , prettyprinter        >=1.7  && <2
                      , data-fix             >=0.2  && <1
                      , ansi-terminal        >=0.6  && <1
                      , linkedhashmap        >=0.4  && <1
                      , unordered-containers
                      , bytestring
                      , split
                      , data-default-class
                      , aeson
                      , aeson-pretty
                      , temporary
                      , vector
                      -- Used for parsing IDX format
                      , mnist-idx            >= 0.1.3.1

  ghc-options:          -Wall -fprint-potential-instances

executable vehicle
  import:             common-base
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      vehicle
                    , optparse-applicative >=0.16 && <1

common common-test-base
  import:             common-base
  hs-source-dirs:     test
  other-modules:      Vehicle.Test.CompileMode
                    , Vehicle.Test.CompileMode.Error
                    , Vehicle.Test.CompileMode.Golden
                    , Vehicle.Test.CompileMode.Unit
                    , Vehicle.Test.CompileMode.Unit.AlphaEquivalence
                    , Vehicle.Test.CompileMode.Unit.CoDeBruijn
                    , Vehicle.Test.CompileMode.Unit.LetInsertion
                    , Vehicle.Test.CompileMode.Unit.PositionTree
                    , Vehicle.Test.CompileMode.Unit.IfElimination
                    , Vehicle.Test.CompileMode.Unit.QuantifierLifting
                    -- , Vehicle.Test.CompileMode.Generative
                    -- , Vehicle.Test.CompileMode.Generative.Generator
                    -- , Vehicle.Test.CompileMode.Generative.ToVehicle

                    , Vehicle.Test.CheckMode
                    , Vehicle.Test.CheckMode.Golden

                    , Vehicle.Test.VerifyMode
                    , Vehicle.Test.VerifyMode.Golden

                    , Vehicle.Test.Utils
                    , Vehicle.Test.Utils.Golden
                    , Vehicle.Test.Utils.FilePath
                    , Vehicle.Test.Utils.TestProgram

  build-depends:      Diff
                    , vehicle
                    , tasty
                    , tasty-golden
                    , tasty-hunit
                    , tasty-bench   >=0.3   && <1
                    , regex-tdfa

                    -- Clone of tasty-program in `Vehicle.Test.Utils.TestProgram`
                    -- , tasty-program >=1.0.5 && <2

                    -- For generation of terms
                    -- , lazy-search
                    -- , size-based
                    -- , testing-feat
                    -- , bifunctors
                    -- , mtl

test-suite vehicle-executable-tests
  import:          common-test-base
  type:            exitcode-stdio-1.0
  main-is:         Vehicle/Test/TestExecutable.hs
  ghc-options:     -threaded
                   -rtsopts
                   "-with-rtsopts=-N"
                   -O0

test-suite vehicle-integration-tests
  import:          common-test-base
  type:            exitcode-stdio-1.0
  main-is:         Vehicle/Test/TestIntegration.hs
  ghc-options:     -threaded
                   -rtsopts
                   "-with-rtsopts=-N"
                   -O0

benchmark vehicle-benchmarks
  import:          common-test-base
  type:            exitcode-stdio-1.0
  main-is:         Vehicle/Test/TestPerformance.hs