[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle_lang_tensorflow"
version = "0.3.0"
description = "Python bindings for the Vehicle language."
authors = [
  { name = "Marco Casadio", email = "tgl70@users.noreply.github.com" },
  { name = "Wen Kokke", email = "wenkokke@users.noreply.github.com" }
]
license = { file = 'LICENSE' }
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
  "vehicle_lang>=0.3.0a4",
  # TODO: lowest possible tensorflow bound?
  "tensorflow>=2.11",
  # TODO: lowest possible numpy bound?
  "numpy>=1.22"
]

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:"]
testpaths = ["tests"]

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_implicit_optional = false
plugins = "numpy.typing.mypy_plugin"
namespace_packages = false

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311
isolated_build = True
skip_missing_interpreters = True

[gh-actions]
python =
  3.8: py38
  3.9: py39
  3.10: py310

[testenv]
commands =
  {envpython} -m unittest tests/test_LossFunctionTranslation.py
passenv =
  APPDATA
  HOME
"""
# The environment variables above are passed because they are needed
# to install the Vehicle standard library.
